Update to React v0.14 and add Flux

--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,9 @@
     </style>
   </head>
   <body>
-    <h5 class="text-center text-muted">Loading application...</h5>
+    <div data-react-application>
+      <h5 class="text-center text-muted">Loading application...</h5>
+    </div>
     <script src="js/shopping-list.js"></script>
   </body>
 </html>
